--- a/LinkedList/LinkedList.vcxproj
+++ b/LinkedList/LinkedList.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{E868C490-DF07-4558-B4A7-D3EC0544B8B0}</ProjectGuid>
     <RootNamespace>LinkedList</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -116,11 +116,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="LinkedList.c" />
+    <ClCompile Include="LRUCACHE.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="DisplayMessageEndpoint.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DisplayMessageEndpoint.h" />
+    <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="LRUCACHE.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
