--- a/LinkedList/LinkedList.vcxproj.filters
+++ b/LinkedList/LinkedList.vcxproj.filters
@@ -21,12 +21,21 @@
     <ClCompile Include="DisplayMessageEndpoint.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LRUCACHE.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="LinkedList.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DisplayMessageEndpoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LRUCACHE.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
